# manuscript-core

./: .gitignore  .goreleaser.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  go.mod  go.sum  install-gui.sh  install.sh
decoders/jupiter-swap-decoder/: Cargo.toml  README.md
decoders/jupiter-swap-decoder/src/: lib.rs
decoders/jupiter-swap-decoder/src/accounts/: mod.rs  token_ledger.rs
decoders/jupiter-swap-decoder/src/instructions/: claim.rs  claim_token.rs  create_open_orders.rs  create_program_open_orders.rs  create_token_ledger.rs  exact_out_route.rs  fee_event.rs  mod.rs  route.rs  route_with_token_ledger.rs  set_token_ledger.rs  shared_accounts_exact_out_route.rs  shared_accounts_route.rs  shared_accounts_route_with_token_ledger.rs  swap_event.rs
decoders/jupiter-swap-decoder/src/types/: accounts_type.rs  amount_with_slippage.rs  mod.rs  remaining_accounts_info.rs  remaining_accounts_slice.rs  route_plan_step.rs  side.rs  swap.rs
decoders/meteora-damm-v2-decoder/: Cargo.toml
decoders/meteora-damm-v2-decoder/src/: lib.rs
decoders/meteora-damm-v2-decoder/src/accounts/: claim_fee_operator.rs  config.rs  mod.rs  pool.rs  position.rs  token_badge.rs  vesting.rs
decoders/meteora-damm-v2-decoder/src/instructions/: add_liquidity.rs  claim_partner_fee.rs  claim_position_fee.rs  claim_protocol_fee.rs  claim_reward.rs  close_claim_fee_operator.rs  close_config.rs  close_position.rs  create_claim_fee_operator.rs  create_config.rs  create_dynamic_config.rs  create_position.rs  create_token_badge.rs  evt_add_liquidity_event.rs  evt_claim_partner_fee_event.rs  evt_claim_position_fee_event.rs  evt_claim_protocol_fee_event.rs  evt_claim_reward_event.rs  evt_close_claim_fee_operator_event.rs  evt_close_config_event.rs  evt_close_position_event.rs  evt_create_claim_fee_operator_event.rs  evt_create_config_event.rs  evt_create_dynamic_config_event.rs  evt_create_position_event.rs  evt_create_token_badge_event.rs  evt_fund_reward_event.rs  evt_initialize_pool_event.rs  evt_initialize_reward_event.rs  evt_lock_position_event.rs  evt_permanent_lock_position_event.rs  evt_remove_liquidity_event.rs  evt_set_pool_status_event.rs  evt_swap_event.rs  evt_update_reward_duration_event.rs  evt_update_reward_funder_event.rs  evt_withdraw_ineligible_reward_event.rs  fund_reward.rs  initialize_customizable_pool.rs  initialize_pool.rs  (+13 more)
decoders/meteora-damm-v2-decoder/src/types/: add_liquidity_parameters.rs  base_fee_config.rs  base_fee_parameters.rs  base_fee_struct.rs  claim_fee_operator.rs  config.rs  dynamic_config_parameters.rs  dynamic_fee_config.rs  dynamic_fee_parameters.rs  dynamic_fee_struct.rs  initialize_customizable_pool_parameters.rs  initialize_pool_parameters.rs  mod.rs  pool.rs  pool_fee_parameters.rs  pool_fees_config.rs  pool_fees_struct.rs  pool_metrics.rs  position.rs  position_metrics.rs  remove_liquidity_parameters.rs  reward_info.rs  static_config_parameters.rs  swap_parameters.rs  swap_result.rs  token_badge.rs  user_reward_info.rs  vesting.rs  vesting_parameters.rs
decoders/meteora-dlmm-decoder/: Cargo.toml  meteora_dlmm.json
decoders/meteora-dlmm-decoder/src/: lib.rs
decoders/meteora-dlmm-decoder/src/accounts/: bin_array.rs  bin_array_bitmap_extension.rs  lb_pair.rs  mod.rs  oracle.rs  position.rs  position_v2.rs  preset_parameter.rs  preset_parameter2.rs
decoders/meteora-dlmm-decoder/src/instructions/: add_liquidity.rs  add_liquidity2.rs  add_liquidity_by_strategy.rs  add_liquidity_by_strategy2.rs  add_liquidity_by_strategy_one_side.rs  add_liquidity_by_weight.rs  add_liquidity_event.rs  claim_fee.rs  (+81 more)
decoders/okx-dex-decoder/: Cargo.toml
decoders/okx-dex-decoder/src/: lib.rs
decoders/pump-swap-decoder/: Cargo.toml  README.md
decoders/pump-swap-decoder/src/: lib.rs
gui/: Cargo.toml  build.rs  build.sh
gui/config/: default.yaml
gui/src/: api.rs  app.rs  config.rs  docker.rs  lib.rs  logger.rs  main.rs  setup.rs  ui.rs
gui/src/prerun/: mod.rs  prerun.rs
gui/src/tasks/: docker.rs  mod.rs  sql.rs  tasks.rs
(+658 files in other folders)
