[package]
name = "manuscript-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
env_logger = "0.11.5"
chrono = "0.4"
serde_json = "1.0"
dirs = "5.0"
serde_yaml = "0.9"
webbrowser = "1.0.2"