[package]
name = "manuscript-gui"
version = "1.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.0-alpha.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
env_logger = "0.11.5"
chrono = "0.4"
serde_json = "1.0"
dirs = "5.0"
serde_yaml = "0.9"
webbrowser = "1.0.2"
config = "0.14.1"
lazy_static = "1.4.0"
base64 = "0.22.1"
aes-gcm = "0.10.3"
sysinfo = "0.33.0"
rand = "0.8.5"
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ["macros"] }