[package]
name = "okx-dex-decoder"
version = "0.10.0"
description = "OKX DEX Decoder"
license = { workspace = true }
edition = { workspace = true }
readme = "README.md"
keywords = ["solana", "decoder", "okx"]
categories = ["encoding"]

[lib]
crate-type = ["rlib"]

[dependencies]
carbon-core = { workspace = true }
serde = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true, default-features = false }
solana-pubkey = { workspace = true }
